fix align items list

--- a/shopping-list/src/app/components/shopping-list/shopping-list.component.scss
+++ b/shopping-list/src/app/components/shopping-list/shopping-list.component.scss
@@ -1,6 +1,8 @@
 .container {
     display: flex;
-    margin-left: 10vw;
+    flex-direction: column;
+    width: 400px;
+    margin: auto;
     .title {
         display: flex;
         justify-content: center;
